CHANGES IN VERSION 1.0.0
-------------------------

BUG FIXES

    o Fixed scoring matrices for matches and geometrical compatibility. They
      were combined with wrong types of triplexes. Among other things this
      caused the output of the program to be slightly innaccurate for certain
      types of triplexes.